--- a/README
+++ b/README
@@ -15,10 +15,9 @@ Password requirements guide (uppercase, lowercase, number, min 8 characters)
 
 Clean and modern UI with shadows, rounded corners, and hover effects
 
-📸 Preview
+Live Demo
 
 
-(Add a screenshot of your form here — just take one and upload to repo as screenshot.png)
 
 🛠️ Technologies Used
 
